# MLOPs_text_summarizer

./: Dockerfile  README.md  app.py  main.py  params.yaml  pyproject.toml  requirements.txt  template.py  test.py
config/: config.yaml
research/: 01_data_ingestion.ipynb  02_data_validation.ipynb  03_data_transformation.ipynb  04_model_trainer.ipynb  05_Model_evaluation.ipynb  Text_Summarization.ipynb
src/textSummarizer/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_trainer.py
src/textSummarizer/config/: configuration.py
src/textSummarizer/logging/: logger.py
src/textSummarizer/pipeline/: stage_01_data_ingestion.py  stage_02_data_validation.py  stage_03_data_transformation.py  stage_04_model_trainer.py  stage_05_model_evaluation.py
src/textSummarizer/utils/: common.py
